components/applications/workloads/obsidian-livesync/livesync.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-db
spec:
  selector:
    app: obsidian-db # matches the labels in your StatefulSet
  ports:
    - protocol: TCP
      port: 5984
      targetPort: 5984
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: obsidian-db
spec:
  serviceName: "obsidian-db"
  replicas: 1
  selector:
    matchLabels:
      app: obsidian-db
  template:
    metadata:
      labels:
        app: obsidian-db
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: obsidian-db
          image: docker.io/oleduc/docker-obsidian-livesync-couchdb:master
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.1"
            limits:
              memory: "1Gi"
              cpu: "0.5"
          ports:
            - containerPort: 5984
              name: tcpobsidian
          volumeMounts:
            - name: obsidiandata
              mountPath: "/opt/couchdb/data"
  volumeClaimTemplates:
    - metadata:
        name: obsidiandata
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 8Gi
